# pythonProject3

./: .coverage  README.md  cube.py  kliker.py  main.py  pyproject.toml  readme.md  speedtest.py
data/: 123.py
decorators/: log_decorator.py
src/: decorators.py  external_api.py  filter_by_word.py  generators.py  main.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_filter_by_currency.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
